fix x-overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body, html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 button {
